ROS2/log/build_2024-10-24_16-23-07/uav_patrol/stderr.log
  File "/home/x650/UAV/ROS2/install/uav_patrol/lib/python3.10/site-packages/uav_patrol/drone_controller/utils.py", line 41
    def
       ^
SyntaxError: invalid syntax

